changes to the css file

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </header>
   
         <div class="body-section">
-          <div>
-            <img src="./image-container/illustration-mockups.svg">
+          <div class="illustration-container">
+            <img class="illustration" src="./image-container/illustration-mockups.svg">
           </div>
   
           <div>
